--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: BoyScouts Cookbook
+title: Cub Scouts Cookbook
 author:  # name of site's author
 email:  # email of site's author
 url: https://boyscoutscookbook.github.io # root address of the site
