--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -2,7 +2,7 @@
 # https://github.com/riggraz/no-style-please#customize-the-menu
 
 entries:
-  - title: all recipes
+  - title: all pages
     post_list:
       limit: 100
       show_more: true
